# mcp_examples

./: .gitignore  README.md
python/: README.md
python/client_and_server/: README.md
python/client_and_server/weather/: .env.example  OVERVIEW.md  README.md  mcp_client.py  pyproject.toml  server_config.json  weather_server.py
python/client_and_server/weather/client/: .env.example  app.py  mcp_client.py  server_config.json
python/client_and_server/weather/server/: weather_server.py
python/client_and_server/weather/tests/: geocode.http  geocode_test.py  nws_test.http  openweather_test.http
